add password_change_done.html, password_change_form.html in templates

--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,11 +1,11 @@
 {% extends "admin/base_site.html" %}
 {% load i18n static %}
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %}
-{% block userlinks %}{% url 'django-admindocs-docroot' as docsroot %}{% if docsroot %}<a href="{{ docsroot }}">{% translate 'Documentation' %}</a> / {% endif %} {% translate 'Change password' %} / <a href="{% url 'admin:logout' %}">{% translate 'Log out' %}</a>{% endblock %}
+{% block userlinks %}{% url 'django-admindocs-docroot' as docsroot %}{% if docsroot %}<a href="{{ docsroot }}">{% translate 'Dokumentacja' %}</a> / {% endif %} {% translate 'Zmiana hasła' %} / <a href="{% url 'admin:logout' %}">{% translate 'Wyloguj się' %}</a>{% endblock %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
 <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-&rsaquo; {% translate 'Password change' %}
+&rsaquo; {% translate 'Zmiana hasła' %}
 </div>
 {% endblock %}
 
@@ -15,12 +15,12 @@
 <div>
 {% if form.errors %}
     <p class="errornote">
-    {% if form.errors.items|length == 1 %}{% translate "Please correct the error below." %}{% else %}{% translate "Please correct the errors below." %}{% endif %}
+    {% if form.errors.items|length == 1 %}{% translate "Popraw poniższe błędy." %}{% else %}{% translate "Popraw poniższe błędy." %}{% endif %}
     </p>
 {% endif %}
 
 
-<p>{% translate 'Please enter your old password, for security’s sake, and then enter your new password twice so we can verify you typed it in correctly.' %}</p>
+<p>{% translate 'Ze względów bezpieczeństwa wprowadź swoje stare hasło, a następnie dwukrotnie wprowadź nowe hasło, abyśmy mogli zweryfikować, czy wpisałeś je poprawnie.' %}</p>
 
 <fieldset class="module aligned wide">
 
@@ -48,7 +48,7 @@
 </fieldset>
 
 <div class="submit-row">
-    <input type="submit" value="{% translate 'Change my password' %}" class="default">
+    <input type="submit" value="{% translate 'Zmień moje hasło' %}" class="default">
 </div>
 
 </div>
