--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,13 +1,13 @@
 {% extends "admin/base_site.html" %}
 {% load i18n %}
-{% block userlinks %}{% url 'django-admindocs-docroot' as docsroot %}{% if docsroot %}<a href="{{ docsroot }}">{% translate 'Documentation' %}</a> / {% endif %}{% translate 'Change password' %} / <a href="{% url 'admin:logout' %}">{% translate 'Log out' %}</a>{% endblock %}
+{% block userlinks %}{% url 'django-admindocs-docroot' as docsroot %}{% if docsroot %}<a href="{{ docsroot }}">{% translate 'Dokumentacja' %}</a> / {% endif %}{% translate 'Zmiana hasła' %} / <a href="{% url 'admin:logout' %}">{% translate 'Wyloguj się' %}</a>{% endblock %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
 <a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-&rsaquo; {% translate 'Password change' %}
+&rsaquo; {% translate 'Zmiana hasła' %}
 </div>
 {% endblock %}
 
 {% block content %}
-<p>{% translate 'Your password was changed.' %}</p>
+<p>{% translate 'Twoje hasło zostało zmienione.' %}</p>
 {% endblock %}
