--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<p>{% translate "Thanks for spending some quality time with the web site today." %}</p>
+<p>{% translate "Dziękujemy za spędzenie dziś czasu w naszej bibliotece." %}</p>
 
 <p><a href="{% url 'admin:index' %}">{% translate 'Log in again' %}</a></p>
 
